# empirical_finance

./: .gitignore  flake.nix  hw1.org  pyproject.toml
docs/: custom.html  hw4.org  index.html  local-bib.bib  preseentation.html  preseentation.org  presentation.html  presentation.org
homework/: homework_4
homework/homework_1/: factors_monthly.csv  portfolios25.csv
homework/homework_2/: a1_download_prices.py  homework2.org  homework2.py
homework/homework_3/: hw3.org  hw3.py
homework/homework_4/: research_proposal.org
homework/homework_4/presentation/: index.html  local-bib.bib  preseentation.html  preseentation.org  presentation_help.llm.org
src/empirical_finance/: __init__.py  hw1.py  main.py
