[project]
name = "empirical-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pygments>=2.19.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
]
