[project]
name = "empirical-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pygments>=2.19.2",
    "scipy>=1.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/empirical_finance"]
